--- a/turbo.json
+++ b/turbo.json
@@ -50,10 +50,8 @@
   },
   "globalEnv": [
     "POSTGRES_URL",
-    "AUTH_DISCORD_ID",
-    "AUTH_DISCORD_SECRET",
-    "AUTH_REDIRECT_PROXY_URL",
-    "AUTH_SECRET",
+    "THIRDWEB_SECRET_KEY",
+    "NEXT_PUBLIC_THIRDWEB_CLIENT_ID",
     "PORT"
   ],
   "globalPassThroughEnv": [
