--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -23,10 +23,12 @@
     "@trpc/client": "catalog:",
     "@trpc/server": "catalog:",
     "@trpc/tanstack-react-query": "catalog:",
+    "dotenv": "^17.2.3",
     "next": "^16.0.0",
     "react": "catalog:react19",
     "react-dom": "catalog:react19",
     "superjson": "2.2.3",
+    "thirdweb": "^5.112.4",
     "zod": "catalog:"
   },
   "devDependencies": {
