--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -17,6 +17,7 @@
     "@acme/db": "workspace:*",
     "@acme/ui": "workspace:*",
     "@acme/validators": "workspace:*",
+    "@heyputer/puter.js": "^2.1.6",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tanstack/react-form": "catalog:",
     "@tanstack/react-query": "catalog:",
@@ -27,6 +28,8 @@
     "react": "catalog:react19",
     "react-dom": "catalog:react19",
     "superjson": "2.2.3",
+    "three": "^0.181.2",
+    "three-custom-shader-material": "^6.4.0",
     "zod": "catalog:"
   },
   "devDependencies": {
