--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -29,6 +29,7 @@
     "@types/mocha": ">=9.1.0",
     "@types/node": ">=18.0.0",
     "chai": "^4.2.0",
+    "dotenv": "^17.2.3",
     "eslint": "catalog:",
     "ethers": "^6.4.0",
     "hardhat": "^2.23.0",
