--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint",
     "compile": "npx hardhat compile",
     "coverage": "npx hardhat coverage",
-    "test": "npx hardhat test --show-stack-traces"
+    "test": "npx hardhat test --show-stack-traces",
+    "deploy:base-sepolia": "hardhat run scripts/deploy-training-certification.ts --network baseSepolia"
   },
   "devDependencies": {
     "@acme/eslint-config": "workspace:*",
