docs(contracts): add deployment documentation
- Update .env.example with contract variables
- Add comprehensive README for contracts package
- Document deployment process and post-deployment setup
- Add usage examples and testing guide
- Add local .env.example for contracts package

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,11 @@
 
 # The database URL is used to connect to your Supabase database.
 POSTGRES_URL="postgres://postgres.[USERNAME]:[PASSWORD]@aws-0-eu-central-1.pooler.supabase.com:6543/postgres?workaround=supabase-pooler.vercel"
+
+# Smart Contract Deployment (Base Sepolia)
+PRIVATE_KEY=your_deployer_wallet_private_key
+ALCHEMY_API_KEY=your_alchemy_api_key
+BASESCAN_API_KEY=your_basescan_api_key
+
+# Deployed Contract Addresses
+TRAINING_CERTIFICATION_ADDRESS=
