--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,6 +7,7 @@
     "./admin-mint-certificate-card": "./src/admin-mint-certificate-card.tsx",
     "./button": "./src/button.tsx",
     "./card": "./src/card.tsx",
+    "./chat-interface": "./src/chat-interface.tsx",
     "./completed-courses-grid": "./src/completed-courses-grid.tsx",
     "./course-form-card": "./src/course-form-card.tsx",
     "./dropdown-menu": "./src/dropdown-menu.tsx",
@@ -22,6 +23,7 @@
     "./table": "./src/table.tsx",
     "./textarea": "./src/textarea.tsx",
     "./theme": "./src/theme.tsx",
+    "./three-background": "./src/three-background.tsx",
     "./toast": "./src/toast.tsx"
   },
   "license": "MIT",
@@ -33,19 +35,24 @@
     "ui-add": "pnpm dlx shadcn@latest add && prettier src --write --list-different"
   },
   "dependencies": {
+    "@heyputer/puter.js": "^2.1.6",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-select": "^2.0.0",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.330.0",
+    "next": "^16.0.0",
     "radix-ui": "^1.4.3",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "three": "^0.181.2",
+    "three-custom-shader-material": "^6.4.0"
   },
   "devDependencies": {
     "@acme/eslint-config": "workspace:*",
     "@acme/prettier-config": "workspace:*",
     "@acme/tsconfig": "workspace:*",
     "@types/react": "catalog:react19",
+    "@types/three": "^0.181.0",
     "eslint": "catalog:",
     "prettier": "catalog:",
     "react": "catalog:react19",
