--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "pnpm with-env next build",
     "clean": "git clean -xdf .cache .next .turbo node_modules",
-    "dev": "pnpm with-env next dev",
+    "dev": "pnpm with-env next dev --webpack",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint --flag unstable_native_nodejs_ts_config",
     "start": "pnpm with-env next start",
@@ -41,6 +41,7 @@
     "eslint": "catalog:",
     "jiti": "^2.5.1",
     "prettier": "catalog:",
+    "raw-loader": "^4.0.2",
     "tailwindcss": "catalog:",
     "tw-animate-css": "^1.4.0",
     "typescript": "catalog:"
