--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -24,6 +24,7 @@
     "@trpc/server": "catalog:",
     "@trpc/tanstack-react-query": "catalog:",
     "next": "^16.0.0",
+    "openai": "^6.9.1",
     "react": "catalog:react19",
     "react-dom": "catalog:react19",
     "superjson": "2.2.3",
