--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -22,6 +22,7 @@
     "@acme/db": "workspace:*",
     "@acme/validators": "workspace:*",
     "@trpc/server": "catalog:",
+    "openai": "^6.9.1",
     "superjson": "2.2.3",
     "zod": "catalog:"
   },
