--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -28,6 +28,7 @@
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint --flag unstable_native_nodejs_ts_config",
     "push": "pnpm with-env drizzle-kit push",
+    "seed": "pnpm with-env tsx src/seed.ts",
     "studio": "pnpm with-env drizzle-kit studio",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false",
     "with-env": "dotenv -e ../../.env --"
@@ -45,9 +46,11 @@
     "@acme/tsconfig": "workspace:*",
     "@electric-sql/pglite": "^0.3.14",
     "@types/pg": "^8.15.6",
+    "dotenv-cli": "^10.0.0",
     "drizzle-kit": "^0.31.5",
     "eslint": "catalog:",
     "prettier": "catalog:",
+    "tsx": "^4.19.0",
     "typescript": "catalog:"
   },
   "prettier": "@acme/prettier-config"
