--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,12 +9,14 @@
     "./card": "./src/card.tsx",
     "./completed-courses-grid": "./src/completed-courses-grid.tsx",
     "./course-form-card": "./src/course-form-card.tsx",
+    "./dialog": "./src/dialog.tsx",
     "./dropdown-menu": "./src/dropdown-menu.tsx",
     "./field": "./src/field.tsx",
     "./input": "./src/input.tsx",
     "./label": "./src/label.tsx",
     "./my-proofs-table": "./src/my-proofs-table.tsx",
     "./proof-verification-card": "./src/proof-verification-card.tsx",
+    "./admin-course-list": "./src/public-course-list.tsx",
     "./public-course-list": "./src/public-course-list.tsx",
     "./select": "./src/select.tsx",
     "./separator": "./src/separator.tsx",
@@ -33,9 +35,13 @@
     "ui-add": "pnpm dlx shadcn@latest add && prettier src --write --list-different"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.2.4",
+    "badge": "^1.0.3",
     "class-variance-authority": "^0.7.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.330.0",
     "radix-ui": "^1.4.3",
     "sonner": "^2.0.7",
