--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -29,6 +29,7 @@
     "lint": "eslint --flag unstable_native_nodejs_ts_config",
     "push": "pnpm with-env drizzle-kit push",
     "seed": "pnpm with-env tsx src/seed.ts",
+    "seed:users": "pnpm with-env tsx src/seed-users.ts",
     "studio": "pnpm with-env drizzle-kit studio",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false",
     "with-env": "dotenv -e ../../.env --"
