--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.330.0",
+    "next": "^16.0.0",
     "radix-ui": "^1.4.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
