--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -24,6 +24,7 @@
     "@trpc/server": "catalog:",
     "@trpc/tanstack-react-query": "catalog:",
     "dotenv": "^17.2.3",
+    "lucide-react": "^0.330.0",
     "next": "^16.0.0",
     "pg": "^8.16.3",
     "react": "catalog:react19",
