--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "pnpm with-env next build",
+    "build": "pnpm with-env next build --webpack",
     "clean": "git clean -xdf .cache .next .turbo node_modules",
     "dev": "pnpm with-env next dev --webpack",
     "format": "prettier --check . --ignore-path ../../.gitignore",
